--- a/package.json
+++ b/package.json
@@ -11,18 +11,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.2.14",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.2.14",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@syncfusion/ej2-angular-buttons": "^28.2.6",
+    "@syncfusion/ej2-angular-documenteditor": "^28.2.6",
+    "@syncfusion/ej2-angular-richtexteditor": "^28.2.6",
+    "@syncfusion/ej2-material-theme": "^28.2.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^16.1.8",
     "@angular/cli": "~16.1.2",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
